--- a/GUIDE/documentation/doc_en.html
+++ b/GUIDE/documentation/doc_en.html
@@ -1019,7 +1019,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h3 id="_result_plot_tab">Result Plot tab</h3>
 <div class="paragraph">
 <p>After all the runs, if there is no problem during the execution, the application will generate a graph according to your compilation options.
-By default, only the best execution of a batch is plotted. To plot all runs, deselect "Plot the best run only" in the update plot menu.</p>
+By default, only the last generation of a run is plotted. To plot all generations, deselect "Plot the last generation only" in the update plot menu.</p>
 </div>
 <div class="paragraph">
 <p>If you used options for <a href="#_multi_objective_problems">Multi-objective problems</a> you will have a 3D plot, otherwise, you will have a series of violin plots.</p>
@@ -1235,7 +1235,7 @@ By default, only the best execution of a batch is plotted. To plot all runs, des
 <div id="footer">
 <div id="footer-text">
 Version 2.0.1 22/05/2022<br>
-Last updated 2022-05-22 10:08:49 +0200
+Last updated 2022-05-23 14:43:16 +0200
 </div>
 </div>
 </body>
