--- a/GUIDE/documentation/doc_fr.html
+++ b/GUIDE/documentation/doc_fr.html
@@ -997,7 +997,7 @@ Par exemple, la première graine vaut 0 et nous avons un batch de taille 3. Si l
 <h3 id="_onglet_result_plot">Onglet Result Plot</h3>
 <div class="paragraph">
 <p>A la fin de toutes les exécutions, si aucune erreur n&#8217;est survenue, cette application va générer un graphe en fonction des paramètres de compilation utilisés.
-Par défaut, seul la meilleure exécution d&#8217;un batch est tracée. Pour afficher le diagramme en violon de l&#8217;ensemble des exécutions, désélectionnez "Plot the best generation"
+Par défaut, seule la dernière génération d&#8217;un run est tracée. Pour afficher le diagramme en violon de l&#8217;ensemble des générations, désélectionnez "Plot the last generation only"
 dans le menu update plot.</p>
 </div>
 <div class="paragraph">
@@ -1214,7 +1214,7 @@ dans le menu update plot.</p>
 <div id="footer">
 <div id="footer-text">
 Version 2.0.1 22/05/2022<br>
-Last updated 2022-05-22 10:08:58 +0200
+Last updated 2022-05-23 14:55:17 +0200
 </div>
 </div>
 </body>
